Unwrap UV with "use subdivision modifier" does not work #46529

Closed
opened 2015-10-18 15:07:19 +02:00 by Hakan Tunc · 9 comments

OSX 10.6.8 Ati Radeon HD 2400

Broken: 2.76 (6158a98) Blender buildbot and official 2.76 +2.75 releases
Worked: 2.74

If i Unwrap model with "use subdivision modifier" on, it gives unexpected results(single faces are unwrapped

I uploaded also a example blend file : Unwrap the mesh and turn "use sudivision mod."on.

276.png

274.png

Unwrap.blend.zip

OSX 10.6.8 Ati Radeon HD 2400 Broken: 2.76 (6158a98) Blender buildbot and official 2.76 +2.75 releases Worked: 2.74 If i Unwrap model with "use subdivision modifier" on, it gives unexpected results(single faces are unwrapped I uploaded also a example blend file : Unwrap the mesh and turn "use sudivision mod."on. ![276.png](https://archive.blender.org/developer/F245754/276.png) ![274.png](https://archive.blender.org/developer/F245755/274.png) [Unwrap.blend.zip](https://archive.blender.org/developer/F245758/Unwrap.blend.zip)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Antonis Ryakiotakis was assigned by Hakan Tunc 2015-10-18 15:07:19 +02:00
Author

Added subscriber: @Tunge

Added subscriber: @Tunge
Bastien Montagne changed title from Unwrap UV with "use subdivision modifier" to Unwrap UV with "use subdivision modifier" does not work 2015-10-18 15:26:11 +02:00
Antonis Ryakiotakis was unassigned by Bastien Montagne 2015-10-18 15:26:11 +02:00

Added subscribers: @Sergey, @Psy-Fi, @ideasman42, @mont29

Added subscribers: @Sergey, @Psy-Fi, @ideasman42, @mont29

@Tunge please do not make wild assignments that way…

@Sergey @ideasman42 @Psy-Fi ideas here? Feature works in 2.75, but I can think of several changes in 2.76 that could cause that (subsurf changes themselves of course, OSD, looptris…).

@Tunge please do not make wild assignments that way… @Sergey @ideasman42 @Psy-Fi ideas here? Feature works in 2.75, but I can think of several changes in 2.76 that could cause that (subsurf changes themselves of course, OSD, looptris…).

OpenSubdiv integration doesn't have UVs support yet. But other than that it should all work as it used to. Needs some more investigation, don't currenty have time for this tonight. Can have a closer look later.

OpenSubdiv integration doesn't have UVs support yet. But other than that it should all work as it used to. Needs some more investigation, don't currenty have time for this tonight. Can have a closer look later.
Campbell Barton changed title from Unwrap UV with "use subdivision modifier" does not work to Unwrap UV with "use subdivision modifier" does not work w/ OpenSubdiv 2015-10-19 09:43:54 +02:00
Bastien Montagne changed title from Unwrap UV with "use subdivision modifier" does not work w/ OpenSubdiv to Unwrap UV with "use subdivision modifier" does not work 2015-10-19 09:46:09 +02:00

@ideasman42 it does not work either without OSD…

@ideasman42 it does not work either without OSD…
Campbell Barton self-assigned this 2015-10-19 10:54:18 +02:00

Right, looks like issue with it expecting tessface, looking into fix.

Right, looks like issue with it expecting tessface, looking into fix.

This issue was referenced by 2b12cf40a1

This issue was referenced by 2b12cf40a1912b44f76eb382d7999b66b66a6c6c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46529
No description provided.