Fix T46529: Unwrap UV w/ use-subsurf fails

Regression since moving to looptri.